--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".TilsynListActivity"
+            android:label="@string/title_tilsyn_list"
+            android:parentActivityName=".SokelisteActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.hle.grontlys.SokelisteActivity" />
+        </activity>
+        <activity
+            android:name=".TilsynDetailActivity"
+            android:label="@string/title_tilsyn_detail"
+            android:parentActivityName=".TilsynListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.hle.grontlys.TilsynListActivity" />
+        </activity>
+        <activity
             android:name=".SokelisteActivity"
             android:label="@string/title_sokeliste"
             android:parentActivityName=".MainActivity"
@@ -23,8 +41,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
