--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.hle.grontlys"
+        applicationId "com.kand38.grontlys"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
